--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
+
+    <link href="../../../../../_static/styles/theme.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet">
+    <link href="../../../../../_static/styles/bootstrap.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet">
+    <link href="../../../../../_static/styles/pydata-sphinx-theme.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet">
+    <link href="../../../../../_static/vendor/fontawesome/6.5.2/css/all.min.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet">
+
     <title>Cryptography Suite</title>
     <style>
         body {
@@ -33,7 +39,7 @@
             margin-right: 10px;
         }
 
-        input[type="submit"], .toggle-button {
+        input[type="submit"], .theme-switch-button {
             padding: 10px 15px;
             background-color: #5594b1;
             color: white;
@@ -42,7 +48,7 @@
             margin-top: 10px;
         }
 
-        input[type="submit"]:hover, .toggle-button:hover {
+        input[type="submit"]:hover, .theme-switch-button:hover {
             background-color: #5594b1;
         }
 
@@ -62,7 +68,13 @@
     </style>
 </head>
 <body>
-    <button class="toggle-button" onclick="toggleMode()">Switch to Dark Mode</button>
+    <div class ="article header buttons">
+        <button id = "theme-toggle-button" class="btn btn-sm nav-link pst-navbar-icon theme-switch-button" aria-label="light/dark" data-bs-placement="bottom" data-bs-toggle="tooltip" data-bs-original-title="light/dark">
+            <svg class="svg-inline--fa fa-sun theme-switch fa-lg" data-mode="light" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sun" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"></path></svg><!-- <i class="theme-switch fa-solid fa-sun fa-lg" data-mode="light"></i> Font Awesome fontawesome.com -->
+            <svg class="svg-inline--fa fa-moon theme-switch fa-lg" data-mode="dark" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="moon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg=""><path fill="currentColor" d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"></path></svg><!-- <i class="theme-switch fa-solid fa-moon fa-lg" data-mode="dark"></i> Font Awesome fontawesome.com -->
+            <svg class="svg-inline--fa fa-circle-half-stroke theme-switch fa-lg" data-mode="auto" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="circle-half-stroke" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M448 256c0-106-86-192-192-192V448c106 0 192-86 192-192zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"></path></svg><!-- <i class="theme-switch fa-solid fa-circle-half-stroke fa-lg" data-mode="auto"></i> Font Awesome fontawesome.com -->
+          </button>
+    </div>
     
     <h1>Welcome to the Cryptography suite</h1>
     
@@ -96,27 +108,21 @@
     {% endif %}
 
     <script>
-        //check localStorage for a saved mode on page load
+                // Check localStorage for a saved mode on page load
         window.onload = function() {
             const savedMode = localStorage.getItem('theme');
             if (savedMode === 'dark') {
                 document.body.classList.add('dark-mode');
-                document.querySelector('.toggle-button').textContent = 'Switch to Light Mode';
             }
         };
 
-
-        function toggleMode() {
+        // Add event listener to the button within the 'article header buttons' div
+        document.getElementById('theme-toggle-button').addEventListener('click', function() {
             document.body.classList.toggle('dark-mode');
-            const button = document.querySelector('.toggle-button');
-            if (document.body.classList.contains('dark-mode')) {
-                button.textContent = 'Switch to Light Mode';
-                localStorage.setItem('theme', 'dark');
-            } else {
-                button.textContent = 'Switch to Dark Mode'
-                localStorage.setItem('theme', 'light')
-            }
-        }
+            const currentMode = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
+            localStorage.setItem('theme', currentMode);
+        });
+
     </script>
 </body>
 </html>
