--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
         <h1>Please log in to see the user list.</h1>
     {% endif %}
 
+    <!-- Add a link to the sign-up page -->
+    <p>Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a></p>
+    
     <!-- Flash messages section -->
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
