--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     {% endif %}
 
     <!-- Add a link to the sign-up page -->
-    <p>Don't have an account? <a href="{{ url_for('register') }}">Sign up here</a></p>
+    <p>Don't have an account? <a href="https://www.percivial.live/register">Sign up here</a></p>
     
     <!-- Flash messages section -->
     {% with messages = get_flashed_messages(with_categories=true) %}
