--- a/templates/login.html
+++ b/templates/login.html
@@ -22,5 +22,8 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
+
+    <!-- Add a link to the sign-up page -->
+    <p>Don't have an account? <a href="https://www.percivial.live/register">Sign up here</a></p>
 </body>
 </html>
