--- a/templates/index.html
+++ b/templates/index.html
@@ -43,5 +43,11 @@
         <button type="submit">Upload</button>
     </form>
 
+    <form action="/search" method="GET">
+        <input type="text" name="query" placeholder="Search by name" required>
+        <button type="submit">Search</button>
+    </form>
+
+
 </body>
 </html>
