--- a/templates/header.html
+++ b/templates/header.html
@@ -2,10 +2,10 @@
 <header>
     <nav>
         <ul>
-            <li><a href="{{ url_for('index') }}">Home</a></li>
-            <li><a href="{{ url_for('search') }}">Search Files</a></li>
-            <li><a href="{{ url_for('upload') }}">Upload File</a></li>
-            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            <li><a href="www.percivial.live">Home</a></li>
+            <li><a href="www.percivial.live/search">Search Files</a></li>
+            <li><a href="www.percivial.live">Upload File</a></li>
+            <li><a href="www.percivial.live">Logout</a></li>
         </ul>
     </nav>
 </header>
