--- a/templates/results.html
+++ b/templates/results.html
@@ -1,3 +1,5 @@
+{% include 'header.html' %}
+
 <form action="{{ url_for('search') }}" method="get">
     <input type="text" name="query" placeholder="Search for files...">
     <button type="submit">Search</button>
