--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,7 @@
     <title>Register</title>
 </head>
 <body>
+    {% include 'header.html' %}
     <h1>Register</h1>
     <form method="POST">
         <input type="text" name="name" placeholder="Name" required>
