--- a/templates/header.html
+++ b/templates/header.html
@@ -2,10 +2,10 @@
 <header>
     <nav>
         <ul>
-            <li><a href="www.percivial.live">Home</a></li>
-            <li><a href="www.percivial.live/search">Search Files</a></li>
-            <li><a href="www.percivial.live">Upload File</a></li>
-            <li><a href="www.percivial.live">Logout</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="/search">Search Files</a></li>
+            <li><a href="">Upload File</a></li>
+            <li><a href="">Logout</a></li>
         </ul>
     </nav>
 </header>
