--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/search">Search Files</a></li>
         </ul>
     </nav>
