--- a/templates/index.html
+++ b/templates/index.html
@@ -11,16 +11,10 @@
     {% if 'user_id' in session %}
         <a href="{{ url_for('logout') }}">Logout</a>
         <h1>Welcome, {{ user.name }}!</h1>
-        <h1>User List</h1>
-        <ul>
-            {% for user in users %}
-                <li>{{ user.name }}</li>
-            {% endfor %}
-        </ul>
     
     {% else %}
         <a href="{{ url_for('login') }}">Login</a>
-        <h1>Please log in to see the user list.</h1>
+        <h1>Please log in or create an account.</h1>
     {% endif %}
     
     <!-- Flash messages section -->
