--- a/templates/header.html
+++ b/templates/header.html
@@ -35,13 +35,13 @@
     }
 
     body.light-mode {
-        background-color: #ffffff;
-        color: #000000;
+        background-color: #f4f4f4;
+        color: #333;
     }
 
     body.dark-mode {
-        background-color: #000000;
-        color: #ffffff;
+        background-color: #333;
+        color: #f4f4f4;
     }
 </style>
 
