--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
 </head>
 <body>
+    {% include 'header.html' %}
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <ul>
