--- a/templates/header.html
+++ b/templates/header.html
@@ -41,22 +41,22 @@
 
     body.light-mode .header {
         background-color: #f8f9fa; /* Light background for header */
-        color: #000000; /* Light text color */
+        color: #333; /* Light text color */
     }
 
     body.dark-mode .header {
         background-color: #343a40; /* Dark background for header */
-        color: #ffffff; /* Dark text color */
+        color: #f4f4f4; /* Dark text color */
     }
 
     body.light-mode {
-        background-color: #ffffff;
-        color: #000000;
+        background-color: #f4f4f4;
+        color: #333;
     }
 
     body.dark-mode {
-        background-color: #000000;
-        color: #ffffff;
+        background-color: #333;
+        color: #f4f4f4;
     }
     
 </style>
