--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
             display: flex;
             justify-content: space-between; /* Space between nav and toggle */
             align-items: center; /* Center items vertically */
-            background-color: #f8f9fa; /* Default light background */
+            background-color: #f4f4f4; /* Default light background */
             padding: 10px;
             border-bottom: 1px solid #ccc;
             transition: background-color 0.3s, color 0.3s; /* Smooth transition */
@@ -85,13 +85,13 @@
 
         /* Styles for light mode */
         body.light-mode header {
-            background-color: #f8f9fa; /* Light background for header */
+            background-color: #f4f4f4; /* Light background for header */
             color: #333; /* Light text color */
         }
 
         /* Styles for dark mode */
         body.dark-mode header {
-            background-color: #343a40; /* Dark background for header */
+            background-color: #333; /* Dark background for header */
             color: #f4f4f4; /* Dark text color */
         }
 
