--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
     {% include 'header.html' %}
     
     {% if 'user_id' in session %}
-        <a href="{{ url_for('logout') }}">Logout</a>
+        <a href="{{ url_for('/logout') }}">Logout</a>
         <h1>Welcome, {{ user.name }}!</h1>
 
     {% else %}
-        <a href="{{ url_for('login') }}">Login</a>
+        <a href="{{ url_for('/login') }}">Login</a>
         <h1>Please log in or create an account.</h1>
     {% endif %}
     
