--- a/static/index.css
+++ b/static/index.css
@@ -32,6 +32,7 @@ body {
     padding: 10px;
     border-radius: 5px;
     text-align: center;
+    list-style-type: none; /* Remove bullet points */
 }
 
 .alert-success {
@@ -44,6 +45,9 @@ body {
     color: #721c24;
 }
 
+li.alert {
+    margin-bottom: 10px;
+}
 /* Form Section Styles */
 form {
     max-width: 400px;
@@ -114,6 +118,11 @@ a:hover {
 p {
     text-align: center;
     margin: 20px 0;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
 }
 
 /* Dark Mode Styles */
